Fix the gap between grid columns

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@
 
         .form-input {
           display: grid;
-          grid-template-columns: 1fr 1fr;
+          grid-template-columns: 1fr 3fr;
           column-gap: 0;
           row-gap: 10px;
 
